feat/add-vacancies-crud (#60)
